# Num

./: LICENSE  README-dev.md  README.md  help.md  main-1.py  main.py  pyproject.toml  setup.cfg
.github/workflows/: codecov.yml  pylint.yml  python-publish.yml  test.yml
docs/source/: conf.py  index.rst  modules.rst  num_tini4.rst  src.num_tini4.rst  src.primes.rst
num_tini4/: __init__.py  num.py
src/: num.py  primes.py  primes.txt
src/num/: num.py
src/num_tini4/: num.py  primes.py
src/primes/: primes.py
test/: test_num.py
tests/: test_num.py  test_speed.py
