[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "num_tini4"
version = "0.0.1a2"
authors = [
  { name="Tini4", email="tilen.jurican@gmail.com" },
]
description = "Python precise number type."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3.11",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
"Homepage" = "https://github.com/Tini4/Num"
"Bug Tracker" = "https://github.com/Tini4/Num/issues"
