[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "num_tini4"
version = "0.1.1a1"
authors = [
  { name="Tini4", email="tilen.jurican@gmail.com" },
]
description = "Python precise number type."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
"Documentation" = "https://github.com/Tini4/Num/wiki"
"Source Code" = "https://github.com/Tini4/Num"
"Bug Tracker" = "https://github.com/Tini4/Num/issues"
