[metadata]
name = num_tini4
version = 0.1.2a1
author = Tini4
author_email = tilen.jurican@gmail.com
description = Python precise number type.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/Tini4/Num
project_urls =
    Documentation = https://github.com/Tini4/Num/wiki
    Source Code = https://github.com/Tini4/Num
    Bug Tracker = https://github.com/Tini4/Num/issues
classifiers =
    Development Status :: 1 - Planning
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: Other/Proprietary License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Mathematics

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src
